--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-:root {
-  --color-main-grey: #e3e3e3;
-  --color-main-deep-grey: #b9b9b9;
-}
+@layer base {
+  li {
+    @apply p-4;
+  }
 
-* {
-  margin: 0;
-  padding: 0;
-  user-select: none;
-  -webkit-tap-highlight-color: transparent;
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  button {
+    @apply text-white border bg-slate-600 border-slate-600 hover:bg-transparent hover:text-slate-600 rounded-md;
+  }
 }
