--- a/src/components/colorMap.css
+++ b/src/components/colorMap.css
@@ -1,22 +1,22 @@
 .swiper {
   width: 100%;
-  padding-top: 50px;
+  padding-top: 30px;
   padding-bottom: 70px;
   margin: 0 auto;
-  z-index: -1;
+  z-index: 0;
 }
 
 .swiper-slide {
   background-position: center;
   background-size: cover;
-  width: 150px;
+  width: 1px;
   height: auto;
 }
 
-.swiper-slide img {
+/* .swiper-slide img {
   display: block;
   width: 100%;
-}
+} */
 
 .swiper-slide-active {
   transform: scale(1.2) !important;
