--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     @apply p-4;
   }
 
-  button {
+  /* button {
     @apply text-white border bg-slate-600 border-slate-600 hover:bg-transparent hover:text-slate-600 rounded-md;
-  }
+  } */
 }
